Ahora sí, penúltima expansión de contenido

--- a/index.html
+++ b/index.html
@@ -181,37 +181,65 @@
 					<div class="team">
 				        <div class="member">
 				            <img src="Pictures/Company Logo/01.png">
-				            <p> Mónica Alaine </p>
+				            <p> 
+				            	<b> Mónica Alaine </b>
+				            	<br/>
+				            	Compositora
+				            </p>
 				        </div>
 
 				        <div class="member">
 				            <img src="Pictures/Company Logo/01.png">
-				            <p> Alexia Fernández </p>
+				            <p> 
+				            	<b> Alexia Fernández </b>
+				            	<br/>
+				            	Programadora
+				            </p>
 				        </div>
 
 				        <div class="member">
 				            <img src="Pictures/Company Logo/01.png">
-				            <p> Ayoze González </p>
+				            <p> 
+				            	<b> Ayoze González </b>
+				            	<br/>
+				            	Programador
+				        	</p>
 				        </div>
 
 				        <div class="member">
 				            <img src="Pictures/Company Logo/01.png">
-				            <p> Hugo García </p>
+				            <p> 
+				            	<b> Hugo García </b>
+				            	<br/>
+				            	Programador 
+				        	</p>
 				        </div>
 
 				        <div class="member">
 				            <img src="Pictures/Company Logo/01.png">
-				            <p> Axlin Luengo </p>
+				            <p> 
+				            	<b> Axlin Luengo </b>
+				            	<br/>
+				            	Programadora
+				            </p>
 				        </div>
 
 				        <div class="member">
 				            <img src="Pictures/Company Logo/01.png">
-				            <p> Sara Pedrero </p>
+				            <p> 
+				            	<b> Sara Pedrero </b>
+				            	<br/>
+				            	Artista
+				            </p>
 				        </div>
 
 				        <div class="member">
 				            <img src="Pictures/Company Logo/01.png">
-				            <p> Henar San Román </p>
+				            <p> 
+				            	<b> Henar San Román </b>
+				            	<br/>
+				            	Artista
+				            </p>
 				        </div>
 				    </div>
 				</section>
