Ajuste de los miembros del grupo

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 				            <p> 
 				            	<b> Henar San Román </b>
 				            	<br/>
-				            	Artista
+				            	Artista y Compositora
 				            </p>
 				        </div>
 				    </div>
