--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
 				<h2> Campaña </h2>
 
 				<section id="subsection01">
-					<h3> Descripción del Juego </h3>
+					<h3> 
+						<span class="custom"> Z Ñ W Y </span>
+						<span> Descripción del Juego </span>
+						<span class="custom"> Z Ñ W Y </span>
+					</h3>
 
 					<p>
 						Mare Stellarum es un videojuego de terror cósmico, en el que la libertad del jugador se ve reforzada a través de la exploración de un vasto mundo abierto y la toma de decisiones, desarrollado por la empresa Sleep No More. Podéis haceros una idea de cómo será el juego con el siguiente video promocional:
@@ -71,21 +75,33 @@
 				</section>
 
 				<section id="subsection02">
-					<h3> Historia del Juego </h3>
+					<h3>
+						<span class="custom"> Z Ñ W Y </span>
+						<span> Historia del Juego </span>
+						<span class="custom"> Z Ñ W Y </span>
+					</h3>
 					<p>
 						Eres una arqueóloga espacial en un futuro muy lejano. Hace poco fuiste contactada por la Federación Intergaláctica para investigar una serie de extraños sucesos reportados a lo largo de todo el universo conocido durante los últimos 6 meses. Desde los rincones más profundos de las galaxias que conforman el universo conocido se han registrado multitud de casos de seres y objetos que desaparecen de repente, tan sólo para reaparecer al cabo de unas pocas semanas en un estado completamente irreconocible. No obstante, estas misteriosas desapariciones son únicamente el comienzo. En algunos planetas de la Federación Intergaláctica se han producido avistamientos de extrañas criaturas no catalogadas en ninguna de las enciclopedias de formas de vida espacial. Y lo más desconcertante de todo, es que con la llegada de estos seres desconocidos han aparecido numerosos monumentos de una cultura nunca antes vista. Tu trabajo es viajar a todos aquellos lugares en que se hayan dado casos de esta índole, y realizar un informe detallado sobre todo lo que puedas aprender de estos sucesos. Una vez finalizada la investigación, deberás formular una hipótesis que pueda explicar esta situación sin precedentes.
 					</p>
 				</section>
 				
 				<section id="subsection03">
-					<h3> Jugabilidad del Juego </h3>
+					<h3> 
+						<span class="custom"> Z Ñ W Y </span>
+						<span> Jugabilidad del Juego </span>
+						<span class="custom"> Z Ñ W Y </span>
+					</h3>
 					<p>
 						Lo que acabáis de leer es la premisa de nuestro próximo gran lanzamiento, el videojuego de terror cósmico Mare Stellarum. Basándonos en la mitología de H. P. Lovecraft, así como en numerosos clásicos de la ciencia ficción como la novela Solaris, de Stanislaw Lem, hemos ideado una experiencia de terror completamente novedosa para el mundo de los videojuegos, en la que el jugador no sólo tendrá que enfrentar numerosos horrores innombrables y escapar de ellos con vida, sino que además deberá tratar de comprenderlos y catalogarlos. El jugador podrá investigar los extraños sucesos que se han registrado a lo largo y ancho del universo conocido en cualquier orden y, además, dispondrá de una libertad casi total para recopilar toda aquella información que considere relevante, lo cual incluye información potencialmente errónea. Todo ello busca crear una experiencia extremadamente inmersiva para el jugador, que podrá observar cómo se abre ante él un vasto universo repleto de decisiones.  
 					</p>
 				</section>
 
 				<section id="subsection04">
-					<h3> Compendio de Criaturas </h3>
+					<h3>
+						<span class="custom"> Z Ñ W Y </span>
+						<span> Compendio de Criaturas </span>
+						<span class="custom"> Z Ñ W Y </span>
+					</h3>
 
 					<p>
 						A continuación, podéis observar algunas de las entradas del compendio de criaturas que podréis llegar a encontrar a lo largo de vuestra travesía interesterlar:
@@ -143,7 +159,11 @@
 				</section>
 
 				<section id="subsection05">
-					<h3> Objetivos de la Campaña </h3>
+					<h3> 
+						<span class="custom"> Z Ñ W Y </span>
+						<span> Objetivos de la Campaña </span>
+						<span class="custom"> Z Ñ W Y </span>
+					</h3>
 					<p>
 						Para poder sacar el proyecto adelante en su mejor estado posible, la campaña de financiación tiene que alcanzar una serie de objetivos económicos. A continuación, podéis observar los distintos objetivos de la campaña:
 						<br/><br/>
@@ -160,7 +180,11 @@
 				</section>
 
 				<section id="subsection06">
-					<h3> Contribuciones de la Campaña </h3>
+					<h3>
+						<span class="custom"> Z Ñ W Y </span>
+						<span> Contribuciones de la Campaña </span>
+						<span class="custom"> Z Ñ W Y </span>
+					</h3>
 					<p>
 						Para poder apoyar el proyecto y que salga adelante, tenemos tres formas diferentes de contribuir a la campaña de financiación, cada una de ellas con sus propias recompensas. A continuación, podéis observar los distintos niveles de contribución de la campaña:
 						<br/><br/>
@@ -173,14 +197,18 @@
 				</section>
 
 				<section id="subsection07">
-					<h3> Equipo de Desarrollo </h3>
+					<h3>
+						<span class="custom"> Z Ñ W Y </span>
+						<span> Equipo de Desarrollo </span>
+						<span class="custom"> Z Ñ W Y </span>
+					</h3>
 					<p>
 						El equipo de desarrollo de Sleep No More está compuesto de siete integrantes, cada uno especializado en un área concreta. No obstante, es relativamente frecuente que todos los miembros del equipo asistan a sus compañeros en áreas en las que no se especializan. A continuación, podéis conocer a todos los integrantes de nuestro equipo de desarrollo:
 					</p>
 
 					<div class="team">
 				        <div class="member">
-				            <img src="Pictures/Company Logo/01.png">
+				            <img src="Pictures/Company Logo/02.png">
 				            <p> 
 				            	<b> Mónica Alaine </b>
 				            	<br/>
@@ -189,7 +217,7 @@
 				        </div>
 
 				        <div class="member">
-				            <img src="Pictures/Company Logo/01.png">
+				            <img src="Pictures/Company Logo/02.png">
 				            <p> 
 				            	<b> Alexia Fernández </b>
 				            	<br/>
@@ -198,7 +226,7 @@
 				        </div>
 
 				        <div class="member">
-				            <img src="Pictures/Company Logo/01.png">
+				            <img src="Pictures/Company Logo/02.png">
 				            <p> 
 				            	<b> Ayoze González </b>
 				            	<br/>
@@ -207,16 +235,16 @@
 				        </div>
 
 				        <div class="member">
-				            <img src="Pictures/Company Logo/01.png">
+				            <img src="Pictures/Company Logo/02.png">
 				            <p> 
 				            	<b> Hugo García </b>
 				            	<br/>
-				            	Programador 
+				            	Programador y CM
 				        	</p>
 				        </div>
 
 				        <div class="member">
-				            <img src="Pictures/Company Logo/01.png">
+				            <img src="Pictures/Company Logo/02.png">
 				            <p> 
 				            	<b> Axlin Luengo </b>
 				            	<br/>
@@ -225,7 +253,7 @@
 				        </div>
 
 				        <div class="member">
-				            <img src="Pictures/Company Logo/01.png">
+				            <img src="Pictures/Company Logo/02.png">
 				            <p> 
 				            	<b> Sara Pedrero </b>
 				            	<br/>
@@ -234,7 +262,7 @@
 				        </div>
 
 				        <div class="member">
-				            <img src="Pictures/Company Logo/01.png">
+				            <img src="Pictures/Company Logo/02.png">
 				            <p> 
 				            	<b> Henar San Román </b>
 				            	<br/>
@@ -259,7 +287,7 @@
 
 				<article>
 	        		<details>
-	        			<summary> &nbsp 2. ¿Cuándo surgió la idea original del juego? </summary>
+	        			<summary> &nbsp 1. ¿Cuándo surgió la idea original del juego? </summary>
 	            		<p>
 	            			La idea original del juego surgió hace un año y medio, cuando a nuestro equipo de desarrollo se le ocurrió que podría ser una buena idea crear un videojuego de terror en el espacio tomando inspiración de H. P. Lovecraft.
 	            		</p>
