Última actualización de contenido y estilos

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 				<section id="subsection01">
 					<h3> 
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> &nbsp Ñ </span>
 						<span> Descripción del Juego </span>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> Ñ </span>
 					</h3>
 
 					<p>
@@ -76,9 +76,9 @@
 
 				<section id="subsection02">
 					<h3>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> &nbsp Ñ </span>
 						<span> Historia del Juego </span>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> Ñ </span>
 					</h3>
 					<p>
 						Eres una arqueóloga espacial en un futuro muy lejano. Hace poco fuiste contactada por la Federación Intergaláctica para investigar una serie de extraños sucesos reportados a lo largo de todo el universo conocido durante los últimos 6 meses. Desde los rincones más profundos de las galaxias que conforman el universo conocido se han registrado multitud de casos de seres y objetos que desaparecen de repente, tan sólo para reaparecer al cabo de unas pocas semanas en un estado completamente irreconocible. No obstante, estas misteriosas desapariciones son únicamente el comienzo. En algunos planetas de la Federación Intergaláctica se han producido avistamientos de extrañas criaturas no catalogadas en ninguna de las enciclopedias de formas de vida espacial. Y lo más desconcertante de todo, es que con la llegada de estos seres desconocidos han aparecido numerosos monumentos de una cultura nunca antes vista. Tu trabajo es viajar a todos aquellos lugares en que se hayan dado casos de esta índole, y realizar un informe detallado sobre todo lo que puedas aprender de estos sucesos. Una vez finalizada la investigación, deberás formular una hipótesis que pueda explicar esta situación sin precedentes.
@@ -87,9 +87,9 @@
 				
 				<section id="subsection03">
 					<h3> 
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> &nbsp Ñ </span>
 						<span> Jugabilidad del Juego </span>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> Ñ </span>
 					</h3>
 					<p>
 						Lo que acabáis de leer es la premisa de nuestro próximo gran lanzamiento, el videojuego de terror cósmico Mare Stellarum. Basándonos en la mitología de H. P. Lovecraft, así como en numerosos clásicos de la ciencia ficción como la novela Solaris, de Stanislaw Lem, hemos ideado una experiencia de terror completamente novedosa para el mundo de los videojuegos, en la que el jugador no sólo tendrá que enfrentar numerosos horrores innombrables y escapar de ellos con vida, sino que además deberá tratar de comprenderlos y catalogarlos. El jugador podrá investigar los extraños sucesos que se han registrado a lo largo y ancho del universo conocido en cualquier orden y, además, dispondrá de una libertad casi total para recopilar toda aquella información que considere relevante, lo cual incluye información potencialmente errónea. Todo ello busca crear una experiencia extremadamente inmersiva para el jugador, que podrá observar cómo se abre ante él un vasto universo repleto de decisiones.  
@@ -98,9 +98,9 @@
 
 				<section id="subsection04">
 					<h3>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> &nbsp Ñ </span>
 						<span> Compendio de Criaturas </span>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> Ñ </span>
 					</h3>
 
 					<p>
@@ -160,9 +160,9 @@
 
 				<section id="subsection05">
 					<h3> 
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> &nbsp Ñ </span>
 						<span> Objetivos de la Campaña </span>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> Ñ </span>
 					</h3>
 					<p>
 						Para poder sacar el proyecto adelante en su mejor estado posible, la campaña de financiación tiene que alcanzar una serie de objetivos económicos. A continuación, podéis observar los distintos objetivos de la campaña:
@@ -181,9 +181,9 @@
 
 				<section id="subsection06">
 					<h3>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> &nbsp Ñ </span>
 						<span> Contribuciones de la Campaña </span>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> Ñ </span>
 					</h3>
 					<p>
 						Para poder apoyar el proyecto y que salga adelante, tenemos tres formas diferentes de contribuir a la campaña de financiación, cada una de ellas con sus propias recompensas. A continuación, podéis observar los distintos niveles de contribución de la campaña:
@@ -198,9 +198,9 @@
 
 				<section id="subsection07">
 					<h3>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> &nbsp Ñ </span>
 						<span> Equipo de Desarrollo </span>
-						<span class="custom"> Z Ñ W Y </span>
+						<span class="custom"> Ñ </span>
 					</h3>
 					<p>
 						El equipo de desarrollo de Sleep No More está compuesto de siete integrantes, cada uno especializado en un área concreta. No obstante, es relativamente frecuente que todos los miembros del equipo asistan a sus compañeros en áreas en las que no se especializan. A continuación, podéis conocer a todos los integrantes de nuestro equipo de desarrollo:
@@ -221,7 +221,7 @@
 				            <p> 
 				            	<b> Alexia Fernández </b>
 				            	<br/>
-				            	Programadora
+				            	Programadora y Escritora
 				            </p>
 				        </div>
 
@@ -248,7 +248,7 @@
 				            <p> 
 				            	<b> Axlin Luengo </b>
 				            	<br/>
-				            	Programadora
+				            	Programadora y Tipógrafa
 				            </p>
 				        </div>
 
@@ -257,7 +257,7 @@
 				            <p> 
 				            	<b> Sara Pedrero </b>
 				            	<br/>
-				            	Artista
+				            	Artista y Diseñadora
 				            </p>
 				        </div>
 
@@ -274,12 +274,22 @@
 			</section>
 
 
+			<h4 class="custom"> 
+				Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y 
+			</h4>
+
+
 			<section id="section02">
 				<h2> Cuaderno de Bitácora </h2>
 				<p>
 					Todavía no se ha añadido ninguna entrada al cuaderno de bitácora, pero revisa de vez en cuando esta sección para estar al día con cualquier posible actualización del proyecto Mare Stellarum.
 				</p>
 			</section>
+
+
+			<h4 class="custom"> 
+				Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y 
+			</h4>
 
 
 			<section id="section03">
@@ -321,6 +331,11 @@
 	        		</details>
 				</article>
 			</section>
+
+
+			<h4 class="custom"> 
+				Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y Z Ñ W Y 
+			</h4>
 
 
 			<section id="section04">
