--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
 			</section>
 
 			<section id="section05">
+				<a href="https://linktr.ee/sleepnomore24" target="_blank">Nuestras redes</a>
 				<p>
 					<b>ATENCIÓN:</b> Esta página simula la campaña de microfinanciación de un videojuego ficticio
 					y no representa un producto real. Práctica de Multimedia, 1º GDDV - Curso 23/24
