Agregado el enlace de las redes al boton del logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<header>
-			<a href="#subsection07"><img src="Pictures/Company Logo/01.png"/></a>
+			<a href="https://linktr.ee/sleepnomorecompany"><img src="Pictures/Company Logo/01.png"/></a>
 			<nav></nav>
 			<ul>
 				<li><a href="#section01" class="active"> Campaña </a></li>
@@ -365,7 +365,7 @@
 			</section>
 
 			<section id="section05">
-				<a href="https://linktr.ee/sleepnomore24" target="_blank">Nuestras redes</a>
+				
 				<p>
 					<b>ATENCIÓN:</b> Esta página simula la campaña de microfinanciación de un videojuego ficticio
 					y no representa un producto real. Práctica de Multimedia, 1º GDDV - Curso 23/24
