Revertido el último cambio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<header>
-			<a href="https://linktr.ee/sleepnomorecompany" target="_blank"><img src="Pictures/Company Logo/01.png"/></a>
+			<a href="https://linktr.ee/sleepnomorecompany"><img src="Pictures/Company Logo/01.png"/></a>
 			<nav></nav>
 			<ul>
 				<li><a href="#section01" class="active"> Campaña </a></li>
